--- a/backend/package.json
+++ b/backend/package.json
@@ -53,6 +53,7 @@
     "@nestjs/core": "^11.0.12",
     "@nestjs/event-emitter": "^2.1.1",
     "@nestjs/jwt": "^11.0.0",
+    "@nestjs/microservices": "^11.1.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.13",
     "@nestjs/schedule": "^6.0.0",
@@ -61,6 +62,8 @@
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
     "@types/compression": "^1.7.5",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.8",
     "argon2": "^0.41.1",
     "axios": "^1.8.4",
     "bcrypt": "^5.1.1",
@@ -78,7 +81,7 @@
     "multer": "^1.4.5-lts.1",
     "nestjs-cls": "^4.5.0",
     "nestjs-pino": "^4.1.0",
-    "nodemailer": "^6.9.16",
+    "nodemailer": "^7.0.3",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.14.1",
