--- a/backend/package.json
+++ b/backend/package.json
@@ -56,11 +56,13 @@
     "@nestjs/microservices": "^11.1.3",
     "@nestjs/passport": "^11.0.5",
     "@nestjs/platform-express": "^10.4.13",
+    "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/schedule": "^6.0.0",
     "@nestjs/serve-static": "^4.0.2",
     "@nestjs/swagger": "^11.1.0",
     "@nestjs/throttler": "^6.4.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@nestjs/websockets": "^11.1.3",
     "@types/compression": "^1.7.5",
     "amqp-connection-manager": "^4.1.14",
     "amqplib": "^0.10.8",
@@ -70,6 +72,8 @@
     "bull": "^4.16.5",
     "bullmq": "^5.34.2",
     "cache-manager": "^5.7.6",
+    "cache-manager-ioredis": "^2.1.0",
+    "cache-manager-ioredis-yet": "^2.1.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "compression": "^1.7.5",
@@ -89,6 +93,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.2",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "typeorm": "^0.3.21",
     "typeorm-extension": "^3.6.3",
     "typeorm-naming-strategies": "^4.1.0",
